# mcp-server-sample

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml  sakila-mcp-server-implementation-request.md
docs/: MCP_IMPLEMENTATION_PATTERNS.md  SAKILA_DATABASE.md
init/: 01-init-sakila.sh
sakila_mcp/: __init__.py  server.py
tests/: __init__.py  conftest.py  test_server.py
